@startuml
!pragma layout smetana

skinparam class {
  BackgroundColor #F5F5F5
  BorderColor #1E3A5F
  ArrowColor #2D7D46
  HeaderBackgroundColor #1E3A5F
  HeaderFontColor white
}

skinparam note {
  BackgroundColor #FFFDE7
  BorderColor #FF8C00
}

title Diagramme de Classes — Domaine métier UrbanFlow Mobility

'==========================
' ENUMERATIONS
'==========================

enum ModeTransport {
  WALK
  BUS
  TRAM
  METRO
  BIKE
  ESCOOTER
  CAR
}

enum RoleEnum {
  USER
  ADMIN
}

enum ThemeEnum {
  LIGHT
  DARK
  SYSTEM
}

enum LanguageEnum {
  FR
  EN
}

'==========================
' CLASSES
'==========================

class User {

  - id : UUID
  - email : string
  - passwordHash : string
  - role : RoleEnum
  - preferences : UserPreferences
  - createdAt : DateTime
  - deletedAt : DateTime <<soft delete>>

  + getPublicProfile() : UserDTO
  + anonymize() : void <<RGPD>>
  + exportData() : UserExport <<RGPD art.20>>

}

class UserPreferences {

  - preferredModes : ModeTransport[]
  - pmrMode : boolean
  - co2BudgetWeekly : float
  - notificationsEnabled : boolean
  - language : LanguageEnum
  - theme : ThemeEnum

}

class Route {

  - id : UUID
  - origin : GeoPoint
  - destination : GeoPoint
  - requestedAt : DateTime
  - totalDurationMin : int
  - totalDistanceM : int
  - ecoScore : float <<0-100>>
  - carbonEstimate : float
  - segments : Segment[]

  + calculateEcoScore() : float
  + estimateCO2() : float

}

class Segment {

  - id : UUID
  - mode : ModeTransport
  - operator : string
  - from : Stop
  - to : Stop
  - departureTime : DateTime
  - arrivalTime : DateTime
  - distanceM : int
  - line : string
  - gtfsTripId : string

  + getDuration() : int

}

class Stop {

  - id : UUID
  - name : string
  - location : GeoPoint
  - pmrAccessible : boolean
  - operatorCode : string

}

class GeoPoint <<Value Object>> {

  - latitude : float
  - longitude : float

  + distanceTo(other : GeoPoint) : float

}

class CarbonRecord {

  - id : UUID
  - userId : UUID
  - routeId : UUID
  - date : DateTime
  - co2Grams : float
  - mode : ModeTransport
  - distanceM : int
  - savedVsCarGrams : float

  + compare(mode : ModeTransport) : float

}

class CarbonBudget {

  - id : UUID
  - userId : UUID
  - year : int
  - week : int
  - weeklyBudgetGrams : float
  - consumedWeeklyGrams : float

  + getRemainingBudget() : float
  + isOverBudget() : boolean

}

class Alert {

  - id : UUID
  - stopIds : string[]
  - lineIds : string[]
  - affectedMode : ModeTransport
  - severity : SeverityEnum
  - cause : string
  - effect : string
  - startTime : DateTime
  - endTime : DateTime
  - gtfsAlertId : string

}

'==========================
' RELATIONS
'==========================

User "1" *-- "1" UserPreferences : owns

User "1" o-- "*" CarbonRecord : tracks

User "1" o-- "*" CarbonBudget : manages

Route "1" *-- "1..*" Segment : composed of

Segment "*" --> "1" Stop : from / to

Segment --> ModeTransport

CarbonRecord "*" --> "1" Route : references

CarbonBudget "1" -- "*" CarbonRecord : aggregates

Route --> GeoPoint : origin / destination

Stop --> GeoPoint : location

Alert "*" -- "*" Stop : affects
'==========================
' NOTES
'==========================

note right of User

• Mot de passe stocké avec bcrypt (cost = 12)

• Suppression logique (Soft Delete)

• Export des données personnelles (RGPD Art.20)

• Anonymisation des données

end note

note bottom of Route

EcoScore :

100 = mobilité douce

0 = voiture individuelle

Calcul basé sur :

- émissions CO₂

- distance

- mode de transport

end note

note right of CarbonRecord

Calcul basé sur les facteurs

ADEME Base Carbone®

BUS : 113 gCO₂e/km

TRAM : 4 gCO₂e/km

METRO : 4 gCO₂e/km

BIKE : 0 gCO₂e/km

CAR : 218 gCO₂e/km

end note

note right of GeoPoint

Value Object partagé

entre Route et Stop.

Compatible PostGIS.

end note

note bottom of Alert

Les alertes proviennent

du flux GTFS-Realtime

(Service Alerts).

Elles permettent

d'adapter les itinéraires

en fonction des perturbations.

end note
@enduml